Fix Field label spacing

--- a/src/components/Field/style.scss
+++ b/src/components/Field/style.scss
@@ -27,7 +27,7 @@
   &__label {
     position: relative;
     margin-top: var(--spacing-xs);
-    padding-top: var(--spacing-xs);
+    padding-top: var(--spacing-sm);
     font-size: var(--size-xxs);
     font-weight: var(--weight-bold);
     text-transform: uppercase;
